feat: menu buttons

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 :root {
     --bg-dark: rgb(6, 6, 26);
-    --bg-transparent: hsla(0, 0%, 100%, 0.137);
-    --bg-purple: rgb(90, 50, 143);
-    --border-transparent: hsla(0, 0%, 100%, 0.06);
+    --bg-transparent: hsla(0, 0%, 100%, 0.05);
+    --bg-purple: rgb(102, 54, 163);
+    --border-transparent: hsla(0, 0%, 100%, 0.068);
     --section-text: rgba(255, 255, 255, 0.5);
+    --border-radius: .8em;
+
 }
 
 * {
@@ -31,18 +33,18 @@ body {
 
 
 
-aside {
-    padding: 30px 25px;
+aside section {
+    padding: 0 25px;
 }
 
 #profile img {
-    border-radius: 1em;
+    border-radius: var(--border-radius);
     ;
 }
 
 #profile {
     display: flex;
-
+    margin-bottom: 15px;
 }
 
 #profile #user-info #username {
@@ -76,6 +78,15 @@ aside article *,
     transition: all 1s;
 }
 
+#search-bar {
+    width: 100%;
+    display: block;
+    border-radius: var(--border-radius);
+    padding: 8px;
+    border: 1px solid var(--border-transparent);
+    background-color: var(--bg-transparent);
+}
+
 #menu-toggler input {
     display: none;
 }
@@ -85,4 +96,40 @@ aside article *,
     display: inline-block;
     padding: 10px;
     background-color: var(--bg-transparent);
+}
+
+#aside-top {
+    padding-top: 30px;
+    padding-bottom: 25px;
+    border-bottom: 1px solid var(--border-transparent);
+}
+
+#menu-list {
+    padding-bottom: 30px;
+}
+
+.aside-section-title {
+    text-transform: uppercase;
+    font-size: .95em;
+    margin-bottom: 15px;
+}
+
+aside article {
+    margin-top: 30px;
+}
+
+#menu-list ul li,
+#menu-list ul a {
+    display: block;
+    border-radius: var(--border-radius);
+    line-height: 38px;
+    padding: 0px 5px;
+    text-indent: 20px;
+}
+
+#menu-list ul a:hover {
+    background:
+        radial-gradient(ellipse at bottom, var(--bg-purple), transparent);
+    border: 2px solid rgb(45, 37, 65);
+    color: white;
 }
