--- a/css/breakpoints/lg.css
+++ b/css/breakpoints/lg.css
@@ -3,4 +3,23 @@
     #menu-toggler {
         display: none;
     }
+
+    aside {
+        width: 25%;
+        max-width: 280px;
+        height: 100vh;
+        float: left;
+        border-right: 1px solid var(--border-transparent);
+    }
+
+    #profile img {
+        width: 40px;
+        margin-right: 15px;
+    }
+
+    #search-bar{
+       
+    }
+
+
 }
