--- a/css/breakpoints/lg.css
+++ b/css/breakpoints/lg.css
@@ -5,9 +5,10 @@
     }
 
     aside {
+        position: relative;
         width: 25%;
         max-width: 280px;
-        height: 100vh;
+        min-height: 100vh;
         float: left;
         border-right: 1px solid var(--border-transparent);
     }
@@ -17,4 +18,33 @@
         margin-right: 15px;
     }
 
+    #aside-footer {
+        margin: 30px 0;
+    }
+
+    #aside-footer article{
+        border-radius: var(--border-radius);
+        border: 1px solid var(--border-transparent);
+        background-color: var(--bg-light);
+        padding: 2px;
+    }
+
+    #aside-footer .radio-group {
+        display: block;
+        padding: 12px 7px;
+        border-radius: .5em;
+    }
+
+    #aside-footer .active {
+        background-color: var(--bg-lighter);
+    }
+
+    #aside-footer .radio-group label {
+        display: block;
+        font-size: .8em;
+    }
+
+    #aside-footer .radio-group input {
+        display: none;
+    }
 }
