--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@
     box-sizing: border-box;
 }
 
+
 a {
     text-decoration: none;
 }
@@ -61,6 +62,11 @@ aside article *,
 
 #profile #user-info a {
     font-size: 0.9em;
+}
+
+#profile img {
+    width: 40px;
+    margin-right: 15px;
 }
 
 .dispose {
@@ -140,4 +146,35 @@ aside article {
 .aside-section-title,
 #menu-list ul a {
     font-size: 12px;
+}
+
+
+aside-footer {
+    margin: 30px 0;
+}
+
+#aside-footer article{
+    border-radius: var(--border-radius);
+    border: 1px solid var(--border-transparent);
+    background-color: var(--bg-light);
+    padding: 2px;
+}
+
+#aside-footer .radio-group {
+    display: block;
+    padding: 12px 7px;
+    border-radius: .5em;
+}
+
+#aside-footer .active {
+    background-color: var(--bg-lighter);
+}
+
+#aside-footer .radio-group label {
+    display: block;
+    font-size: .8em;
+}
+
+#aside-footer .radio-group input {
+    display: none;
 }
