--- a/css/breakpoints/lg.css
+++ b/css/breakpoints/lg.css
@@ -4,47 +4,30 @@
         display: none;
     }
 
+    #aside {
+        display: block;
+    }
+
     aside {
+        box-shadow: none;
         position: relative;
         width: 25%;
         max-width: 280px;
-        min-height: 100vh;
         float: left;
-        border-right: 1px solid var(--border-transparent);
+       
     }
 
-    #profile img {
-        width: 40px;
-        margin-right: 15px;
+
+    main {
+        float: right;
+        width: 80%;
+        padding: 20px;
+        
+        border-left: 1px solid var(--border-transparent);
     }
 
-    #aside-footer {
-        margin: 30px 0;
-    }
+   
 
-    #aside-footer article{
-        border-radius: var(--border-radius);
-        border: 1px solid var(--border-transparent);
-        background-color: var(--bg-light);
-        padding: 2px;
-    }
+    
 
-    #aside-footer .radio-group {
-        display: block;
-        padding: 12px 7px;
-        border-radius: .5em;
-    }
-
-    #aside-footer .active {
-        background-color: var(--bg-lighter);
-    }
-
-    #aside-footer .radio-group label {
-        display: block;
-        font-size: .8em;
-    }
-
-    #aside-footer .radio-group input {
-        display: none;
-    }
 }
