--- a/css/breakpoints/lg.css
+++ b/css/breakpoints/lg.css
@@ -9,12 +9,13 @@
     }
 
     aside {
+        top:0px;
+        padding-top: 0px;
         box-shadow: none;
         position: relative;
         width: 25%;
         max-width: 280px;
         float: left;
-       
     }
 
 
@@ -22,7 +23,7 @@
         float: right;
         width: 80%;
         padding: 20px;
-        
+
         border-left: 1px solid var(--border-transparent);
     }
 
