--- a/css/breakpoints/sm.css
+++ b/css/breakpoints/sm.css
@@ -1,18 +1,35 @@
 header {
     border-bottom: 2px solid var(--border-transparent);
+    z-index: 9;
+    position: relative;
+    background-color: var(--bg-light-primary);
 }
 
 aside {
-    position: fixed;
-    display: none;
+    background-color: var(--bg-light-primary);
+    position: relative;
+    top:-30px;
+    float: none;
+    left: 0;
+    padding-bottom: 50px;
+    z-index: 2;
     width: 75%;
-    min-height: 100%;
-    box-shadow: 0 10px 50px rgba(255, 255, 255, 0.226);
+    height: 100vh;
+    box-shadow: 10px 0px 50px rgba(0, 0, 0, 0.411);
+
+    overflow-y: scroll;
 }
 
-#menu-toggler {
-    display: block;
+aside::-webkit-scrollbar {
+    display: none;
 }
+
+#menu-toggler label {
+    /* z-index: 9999; */
+    display: block;
+    color: var(--light-primary-text);
+}
+
 
 .card {
     width: 30%;
