--- a/css/breakpoints/sm.css
+++ b/css/breakpoints/sm.css
@@ -1,18 +1,20 @@
 header {
     border-bottom: 2px solid var(--border-transparent);
     z-index: 9;
-    position: relative;
+    position: sticky;
+    top: 0;
     background-color: var(--bg-light-primary);
+    box-shadow: 0 0px 10px var(--light-shadow);
 }
 
 aside {
     background-color: var(--bg-light-primary);
-    position: relative;
-    top:-30px;
-    float: none;
+    position: fixed;
+    top: 15px;
     left: 0;
+    padding-top: 30px;
     padding-bottom: 50px;
-    z-index: 2;
+    z-index: 5;
     width: 75%;
     height: 100vh;
     box-shadow: 10px 0px 50px rgba(0, 0, 0, 0.411);
@@ -20,19 +22,25 @@ aside {
     overflow-y: scroll;
 }
 
-aside::-webkit-scrollbar {
+#aside::-webkit-scrollbar {
     display: none;
 }
 
 #menu-toggler label {
     /* z-index: 9999; */
-    display: block;
-    color: var(--light-primary-text);
+    margin: 5px;
+    color: var(--bg-light-active);
+    border: 1px solid var(--bg-light-tertiary);
+    border-radius: var(--border-radius);
 }
 
+    main {
+        width: 100%;
+        padding: 20px 10px;
+    }
 
 .card {
-    width: 30%;
+    width:90%;
     padding: 15px;
     border-radius: var(--border-radius);
     border: 2px solid var(--border-transparent);
